# litellm-proxy-api-client

./: README.md  pyproject.toml
litellm_proxy_api_client/: __init__.py
litellm_proxy_api_client/api/assistants/: add_messages_threads_thread_id_messages_post.py  create_threads_threads_post.py  (+10 more)
litellm_proxy_api_client/models/: __init__.py  block_team_request.py  block_users.py  body_audio_transcriptions_audio_transcriptions_post.py  body_audio_transcriptions_v1_audio_transcriptions_post.py  budget_delete_request.py  budget_new.py  budget_request.py  config_field_delete.py  config_field_delete_config_type.py  config_field_info.py  config_field_update.py  config_field_update_config_type.py  config_general_settings.py  config_general_settings_alert_to_webhook_url_type_0.py  config_general_settings_alert_types_type_0_item.py  config_general_settings_alerting_args_type_0.py  config_general_settings_database_type_type_0.py  config_general_settings_ui_access_mode_type_0.py  config_list.py  config_yaml.py  config_yaml_environment_variables_type_0.py  config_yaml_litellm_settings_type_0.py  delete_customer_request.py  delete_team_request.py  deployment.py  dynamo_db_args.py  dynamo_db_args_billing_mode.py  get_config_list_config_list_get_config_type.py  get_global_spend_report_global_spend_report_get_group_by_type_0.py  global_end_users_spend.py  invitation_delete.py  invitation_model.py  invitation_new.py  invitation_update.py  key_management_system.py  key_request.py  lite_llm_budget_table.py  lite_llm_budget_table_model_max_budget_type_0.py  lite_llm_end_user_table.py  (+44 more)
(+109 files in other folders)
